--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
-    "json-server": "json-server",
-    "mock-server:start": "json-server db.json"
+    "serve": "serve",
+    "mock-server:start": "serve -p 3000 --cors ./mocks"
   },
   "dependencies": {
     "@niku/vite-env-caster": "^1.0.2",
@@ -37,6 +37,7 @@
     "json-server": "1.0.0-beta.0",
     "npm-run-all2": "^6.1.2",
     "prettier": "^3.2.5",
+    "serve": "^14.2.3",
     "typescript": "~5.4.0",
     "vite": "^5.2.8",
     "vite-plugin-vue-devtools": "^7.0.25",
